完成html画图，修复一个skyline超出上边界的小bug

--- a/Deploy/Instance/GSRC/HARD/n10.html
+++ b/Deploy/Instance/GSRC/HARD/n10.html
@@ -5,36 +5,36 @@
     <title>2D Packing/Cutting Visualization</title>
   </head>
   <body>
-    <svg width='800' height='800' viewBox='0 0 800 800'>
-      <rect x='152' y='284' width='199' height='82' style='fill:#61BFAD; stroke:black; stroke-width:2'/>
-      <text x='251.5' y='325' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0000'></text>
+    <svg width='800' height='800' viewBox='-50 -50 900 900'>
+      <rect x='152' y='284' width='199' height='82' style='fill:#FD6999; stroke:black; stroke-width:2'/>
+      <text x='251.5' y='325' text-anchor='middle' alignment-baseline='middle' style='fill:#00F000'></text>
 
-      <rect x='126' y='179' width='229' height='105' style='fill:#54CE74; stroke:black; stroke-width:2'/>
-      <text x='240.5' y='231.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF00FF'></text>
+      <rect x='126' y='179' width='229' height='105' style='fill:#256879; stroke:black; stroke-width:2'/>
+      <text x='240.5' y='231.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFFF0'></text>
 
-      <rect x='355' y='208' width='61' height='117' style='fill:#2C18D0; stroke:black; stroke-width:2'/>
-      <text x='385.5' y='266.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FF0F'></text>
+      <rect x='355' y='208' width='61' height='117' style='fill:#209EEF; stroke:black; stroke-width:2'/>
+      <text x='385.5' y='266.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0000'></text>
 
-      <rect x='360' y='325' width='114' height='167' style='fill:#06FC8F; stroke:black; stroke-width:2'/>
-      <text x='417' y='408.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF00F0'></text>
+      <rect x='360' y='325' width='114' height='167' style='fill:#A6C664; stroke:black; stroke-width:2'/>
+      <text x='417' y='408.5' text-anchor='middle' alignment-baseline='middle' style='fill:#0F0FFF'></text>
 
-      <rect x='361' y='0' width='91' height='208' style='fill:#568126; stroke:black; stroke-width:2'/>
-      <text x='406.5' y='104' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFFFF'></text>
+      <rect x='361' y='0' width='91' height='208' style='fill:#08A754; stroke:black; stroke-width:2'/>
+      <text x='406.5' y='104' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0FFF'></text>
 
-      <rect x='152' y='366' width='208' height='129' style='fill:#CB4300; stroke:black; stroke-width:2'/>
-      <text x='256' y='430.5' text-anchor='middle' alignment-baseline='middle' style='fill:#00FFFF'></text>
+      <rect x='152' y='366' width='208' height='129' style='fill:#7B2E6D; stroke:black; stroke-width:2'/>
+      <text x='256' y='430.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0F0F0'></text>
 
-      <rect x='0' y='0' width='123' height='108' style='fill:#0AF2F0; stroke:black; stroke-width:2'/>
-      <text x='61.5' y='54' text-anchor='middle' alignment-baseline='middle' style='fill:#F00F0F'></text>
+      <rect x='0' y='0' width='123' height='108' style='fill:#EFF0FA; stroke:black; stroke-width:2'/>
+      <text x='61.5' y='54' text-anchor='middle' alignment-baseline='middle' style='fill:#000F00'></text>
 
-      <rect x='126' y='0' width='235' height='179' style='fill:#4D6C7C; stroke:black; stroke-width:2'/>
-      <text x='243.5' y='89.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0F0F0'></text>
+      <rect x='126' y='0' width='235' height='179' style='fill:#FFEFB0; stroke:black; stroke-width:2'/>
+      <text x='243.5' y='89.5' text-anchor='middle' alignment-baseline='middle' style='fill:#00000F'></text>
 
-      <rect x='0' y='304' width='152' height='193' style='fill:#C7F4BD; stroke:black; stroke-width:2'/>
-      <text x='76' y='400.5' text-anchor='middle' alignment-baseline='middle' style='fill:#0F0F00'></text>
+      <rect x='0' y='304' width='152' height='193' style='fill:#444972; stroke:black; stroke-width:2'/>
+      <text x='76' y='400.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FFF0FF'></text>
 
-      <rect x='0' y='108' width='126' height='196' style='fill:#DEFD42; stroke:black; stroke-width:2'/>
-      <text x='63' y='206' text-anchor='middle' alignment-baseline='middle' style='fill:#0000FF'></text>
+      <rect x='0' y='108' width='126' height='196' style='fill:#0175A6; stroke:black; stroke-width:2'/>
+      <text x='63' y='206' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFF0F'></text>
 
       <circle cx='0' cy='0' r='2' style='fill-opacity:0; stroke:#000000; stroke-width:2'/>
       <circle cx='44' cy='0' r='2' style='fill-opacity:0; stroke:#000000; stroke-width:2'/>
