--- a/Deploy/Instance/GSRC/HARD/n30.html
+++ b/Deploy/Instance/GSRC/HARD/n30.html
@@ -5,96 +5,96 @@
     <title>2D Packing/Cutting Visualization</title>
   </head>
   <body>
-    <svg width='800' height='800' viewBox='0 0 800 800'>
-      <rect x='276' y='142' width='117' height='106' style='fill:#C949A2; stroke:black; stroke-width:2'/>
-      <text x='334.5' y='195' text-anchor='middle' alignment-baseline='middle' style='fill:#00F00F'></text>
+    <svg width='800' height='800' viewBox='-50 -50 900 900'>
+      <rect x='276' y='142' width='117' height='106' style='fill:#B8C34C; stroke:black; stroke-width:2'/>
+      <text x='334.5' y='195' text-anchor='middle' alignment-baseline='middle' style='fill:#0F0FF0'></text>
 
-      <rect x='158' y='35' width='44' height='45' style='fill:#7CBC44; stroke:black; stroke-width:2'/>
-      <text x='180' y='57.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F000FF'></text>
+      <rect x='158' y='35' width='44' height='45' style='fill:#41B797; stroke:black; stroke-width:2'/>
+      <text x='180' y='57.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0F0F'></text>
 
-      <rect x='393' y='142' width='57' height='98' style='fill:#7B4657; stroke:black; stroke-width:2'/>
-      <text x='421.5' y='191' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FFFF'></text>
+      <rect x='393' y='142' width='57' height='98' style='fill:#1F7D2A; stroke:black; stroke-width:2'/>
+      <text x='421.5' y='191' text-anchor='middle' alignment-baseline='middle' style='fill:#F0F0F0'></text>
 
-      <rect x='271' y='0' width='134' height='78' style='fill:#9ADC8F; stroke:black; stroke-width:2'/>
-      <text x='338' y='39' text-anchor='middle' alignment-baseline='middle' style='fill:#0000F0'></text>
+      <rect x='271' y='0' width='134' height='78' style='fill:#05D459; stroke:black; stroke-width:2'/>
+      <text x='338' y='39' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0FF0'></text>
 
-      <rect x='0' y='262' width='79' height='88' style='fill:#3DAF4E; stroke:black; stroke-width:2'/>
-      <text x='39.5' y='306' text-anchor='middle' alignment-baseline='middle' style='fill:#F000F0'></text>
+      <rect x='0' y='262' width='79' height='88' style='fill:#7ED2E8; stroke:black; stroke-width:2'/>
+      <text x='39.5' y='306' text-anchor='middle' alignment-baseline='middle' style='fill:#F00F0F'></text>
 
-      <rect x='89' y='352' width='103' height='37' style='fill:#990796; stroke:black; stroke-width:2'/>
-      <text x='140.5' y='370.5' text-anchor='middle' alignment-baseline='middle' style='fill:#00FF0F'></text>
+      <rect x='89' y='352' width='103' height='37' style='fill:#1E9CB5; stroke:black; stroke-width:2'/>
+      <text x='140.5' y='370.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0000F'></text>
 
-      <rect x='209' y='0' width='62' height='78' style='fill:#D99ACB; stroke:black; stroke-width:2'/>
-      <text x='240' y='39' text-anchor='middle' alignment-baseline='middle' style='fill:#000000'></text>
+      <rect x='209' y='0' width='62' height='78' style='fill:#6FC0AB; stroke:black; stroke-width:2'/>
+      <text x='240' y='39' text-anchor='middle' alignment-baseline='middle' style='fill:#F00F00'></text>
 
-      <rect x='98' y='165' width='108' height='79' style='fill:#85EFE8; stroke:black; stroke-width:2'/>
-      <text x='152' y='204.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF000F'></text>
+      <rect x='98' y='165' width='108' height='79' style='fill:#3A780A; stroke:black; stroke-width:2'/>
+      <text x='152' y='204.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FFF0'></text>
 
-      <rect x='276' y='78' width='127' height='64' style='fill:#DDAE3B; stroke:black; stroke-width:2'/>
-      <text x='339.5' y='110' text-anchor='middle' alignment-baseline='middle' style='fill:#0000F0'></text>
+      <rect x='276' y='78' width='127' height='64' style='fill:#8DF85D; stroke:black; stroke-width:2'/>
+      <text x='339.5' y='110' text-anchor='middle' alignment-baseline='middle' style='fill:#F00FF0'></text>
 
-      <rect x='79' y='244' width='112' height='108' style='fill:#78F664; stroke:black; stroke-width:2'/>
-      <text x='135' y='298' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0FFF'></text>
+      <rect x='79' y='244' width='112' height='108' style='fill:#7AC5EA; stroke:black; stroke-width:2'/>
+      <text x='135' y='298' text-anchor='middle' alignment-baseline='middle' style='fill:#F00F00'></text>
 
-      <rect x='0' y='352' width='89' height='35' style='fill:#506F17; stroke:black; stroke-width:2'/>
-      <text x='44.5' y='369.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FFF0FF'></text>
+      <rect x='0' y='352' width='89' height='35' style='fill:#92A985; stroke:black; stroke-width:2'/>
+      <text x='44.5' y='369.5' text-anchor='middle' alignment-baseline='middle' style='fill:#0F00FF'></text>
 
-      <rect x='0' y='210' width='74' height='52' style='fill:#4957F3; stroke:black; stroke-width:2'/>
-      <text x='37' y='236' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FF0F'></text>
+      <rect x='0' y='210' width='74' height='52' style='fill:#9B068D; stroke:black; stroke-width:2'/>
+      <text x='37' y='236' text-anchor='middle' alignment-baseline='middle' style='fill:#00FFF0'></text>
 
-      <rect x='192' y='276' width='84' height='95' style='fill:#09C74F; stroke:black; stroke-width:2'/>
-      <text x='234' y='323.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F00FF0'></text>
+      <rect x='192' y='276' width='84' height='95' style='fill:#4B3C39; stroke:black; stroke-width:2'/>
+      <text x='234' y='323.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0F0F0'></text>
 
-      <rect x='206' y='212' width='62' height='64' style='fill:#8F6373; stroke:black; stroke-width:2'/>
-      <text x='237' y='244' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FFFF'></text>
+      <rect x='206' y='212' width='62' height='64' style='fill:#BEBD6F; stroke:black; stroke-width:2'/>
+      <text x='237' y='244' text-anchor='middle' alignment-baseline='middle' style='fill:#0000F0'></text>
 
-      <rect x='89' y='389' width='84' height='113' style='fill:#56E2C9; stroke:black; stroke-width:2'/>
-      <text x='131' y='445.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0F00'></text>
+      <rect x='89' y='389' width='84' height='113' style='fill:#8C40DA; stroke:black; stroke-width:2'/>
+      <text x='131' y='445.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FF00'></text>
 
-      <rect x='405' y='0' width='39' height='112' style='fill:#581E31; stroke:black; stroke-width:2'/>
-      <text x='424.5' y='56' text-anchor='middle' alignment-baseline='middle' style='fill:#FFF0FF'></text>
+      <rect x='405' y='0' width='39' height='112' style='fill:#FAF198; stroke:black; stroke-width:2'/>
+      <text x='424.5' y='56' text-anchor='middle' alignment-baseline='middle' style='fill:#000F0F'></text>
 
-      <rect x='206' y='78' width='69' height='134' style='fill:#8831F0; stroke:black; stroke-width:2'/>
-      <text x='240.5' y='145' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFF0F'></text>
+      <rect x='206' y='78' width='69' height='134' style='fill:#4F008F; stroke:black; stroke-width:2'/>
+      <text x='240.5' y='145' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FFF0'></text>
 
-      <rect x='192' y='371' width='71' height='132' style='fill:#419332; stroke:black; stroke-width:2'/>
-      <text x='227.5' y='437' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0FFF'></text>
+      <rect x='192' y='371' width='71' height='132' style='fill:#F33D00; stroke:black; stroke-width:2'/>
+      <text x='227.5' y='437' text-anchor='middle' alignment-baseline='middle' style='fill:#0FF0FF'></text>
 
-      <rect x='49' y='0' width='42' height='106' style='fill:#245F37; stroke:black; stroke-width:2'/>
-      <text x='70' y='53' text-anchor='middle' alignment-baseline='middle' style='fill:#FFF0FF'></text>
+      <rect x='49' y='0' width='42' height='106' style='fill:#DA1C6F; stroke:black; stroke-width:2'/>
+      <text x='70' y='53' text-anchor='middle' alignment-baseline='middle' style='fill:#00F0F0'></text>
 
-      <rect x='347' y='248' width='103' height='120' style='fill:#69339A; stroke:black; stroke-width:2'/>
-      <text x='398.5' y='308' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FF00'></text>
+      <rect x='347' y='248' width='103' height='120' style='fill:#D8D058; stroke:black; stroke-width:2'/>
+      <text x='398.5' y='308' text-anchor='middle' alignment-baseline='middle' style='fill:#0F0FFF'></text>
 
-      <rect x='313' y='373' width='134' height='127' style='fill:#339BAC; stroke:black; stroke-width:2'/>
-      <text x='380' y='436.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF0000'></text>
+      <rect x='313' y='373' width='134' height='127' style='fill:#7F2131; stroke:black; stroke-width:2'/>
+      <text x='380' y='436.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FFFF'></text>
 
-      <rect x='0' y='165' width='98' height='45' style='fill:#8703C0; stroke:black; stroke-width:2'/>
-      <text x='49' y='187.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFF0F'></text>
+      <rect x='0' y='165' width='98' height='45' style='fill:#0EC093; stroke:black; stroke-width:2'/>
+      <text x='49' y='187.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F00F0F'></text>
 
-      <rect x='0' y='389' width='89' height='81' style='fill:#3CDC5B; stroke:black; stroke-width:2'/>
-      <text x='44.5' y='429.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F000F0'></text>
+      <rect x='0' y='389' width='89' height='81' style='fill:#52EE80; stroke:black; stroke-width:2'/>
+      <text x='44.5' y='429.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF00FF'></text>
 
-      <rect x='263' y='373' width='50' height='130' style='fill:#C0B41D; stroke:black; stroke-width:2'/>
-      <text x='288' y='438' text-anchor='middle' alignment-baseline='middle' style='fill:#0F0FF0'></text>
+      <rect x='263' y='373' width='50' height='130' style='fill:#9D2FF9; stroke:black; stroke-width:2'/>
+      <text x='288' y='438' text-anchor='middle' alignment-baseline='middle' style='fill:#00F000'></text>
 
-      <rect x='0' y='0' width='49' height='108' style='fill:#3015BA; stroke:black; stroke-width:2'/>
-      <text x='24.5' y='54' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFF00'></text>
+      <rect x='0' y='0' width='49' height='108' style='fill:#C9E589; stroke:black; stroke-width:2'/>
+      <text x='24.5' y='54' text-anchor='middle' alignment-baseline='middle' style='fill:#000FF0'></text>
 
-      <rect x='91' y='0' width='118' height='35' style='fill:#239AD8; stroke:black; stroke-width:2'/>
-      <text x='150' y='17.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF000F'></text>
+      <rect x='91' y='0' width='118' height='35' style='fill:#41788E; stroke:black; stroke-width:2'/>
+      <text x='150' y='17.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFFF0'></text>
 
-      <rect x='91' y='35' width='67' height='130' style='fill:#0316DE; stroke:black; stroke-width:2'/>
-      <text x='124.5' y='100' text-anchor='middle' alignment-baseline='middle' style='fill:#FFFF00'></text>
+      <rect x='91' y='35' width='67' height='130' style='fill:#AB5957; stroke:black; stroke-width:2'/>
+      <text x='124.5' y='100' text-anchor='middle' alignment-baseline='middle' style='fill:#00F0FF'></text>
 
-      <rect x='0' y='470' width='37' height='33' style='fill:#6D8062; stroke:black; stroke-width:2'/>
-      <text x='18.5' y='486.5' text-anchor='middle' alignment-baseline='middle' style='fill:#F0FFFF'></text>
+      <rect x='0' y='470' width='37' height='33' style='fill:#E7938F; stroke:black; stroke-width:2'/>
+      <text x='18.5' y='486.5' text-anchor='middle' alignment-baseline='middle' style='fill:#0F0FF0'></text>
 
-      <rect x='276' y='248' width='71' height='125' style='fill:#28DB3B; stroke:black; stroke-width:2'/>
-      <text x='311.5' y='310.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF00F0'></text>
+      <rect x='276' y='248' width='71' height='125' style='fill:#84BD86; stroke:black; stroke-width:2'/>
+      <text x='311.5' y='310.5' text-anchor='middle' alignment-baseline='middle' style='fill:#FF00FF'></text>
 
-      <rect x='158' y='80' width='45' height='50' style='fill:#3DB3DE; stroke:black; stroke-width:2'/>
-      <text x='180.5' y='105' text-anchor='middle' alignment-baseline='middle' style='fill:#F00F00'></text>
+      <rect x='158' y='80' width='45' height='50' style='fill:#A87614; stroke:black; stroke-width:2'/>
+      <text x='180.5' y='105' text-anchor='middle' alignment-baseline='middle' style='fill:#0FFFFF'></text>
 
       <circle cx='0' cy='0' r='2' style='fill-opacity:0; stroke:#000000; stroke-width:2'/>
       <circle cx='15' cy='0' r='2' style='fill-opacity:0; stroke:#000000; stroke-width:2'/>
